--- a/Resources/mtm101.rulerp.baldiplus.piratepack/Language/English/Items.json
+++ b/Resources/mtm101.rulerp.baldiplus.piratepack/Language/English/Items.json
@@ -6,13 +6,13 @@
 {"key":"Itm_PShield_4","value":"Shield (4)"},
 {"key":"Itm_PShield_5","value":"Shield (5)"},
 
-{"key":"Desc_PShield","value":"Shield\nWhoever touches this plastic shield is sure to be pushed away! To carry it, just have it selected!"},
+{"key":"Desc_PShield","value":"Shield\nWhoever touches this plastic shield is sure to be pushed away!\nTo carry it, just have it selected!"},
 
 {"key":"Sfx_Shield_Bonk","value":"*PONK!*"},
 {"key":"Sfx_Shield_Dissolve","value":"*PONK...*"},
 
 {"key":"Itm_GoldDoubloon","value":"Gold Doubloon"},
-{"key":"Desc_GoldDoubloon","value":"Gold Doubloon\nThis doubloon is so shiny that anyone will stop whatever they are doing to chase after it if it passes by!"},
+{"key":"Desc_GoldDoubloon","value":"Gold Doubloon\nThis doubloon is so shiny that anyone who sees it\npass by will chase after it!"},
 {"key":"Sfx_Doubloon_Collect","value":"*Dabling!*"}
 
 ]}
