posters + tag rename + pouch isnt contraband

--- a/Resources/mtm101.rulerp.baldiplus.criminalpackroot/Language/English/SFX.json
+++ b/Resources/mtm101.rulerp.baldiplus.criminalpackroot/Language/English/SFX.json
@@ -6,6 +6,7 @@
 {"key":"Sfx_PBounce","value":"*PFT*"},
 {"key":"Sfx_PBounceBig","value":"*PFTTM*"},
 {"key":"Sfx_POpen","value":"*TLIP*"},
-{"key":"Sfx_PaperCrumple","value":"*CRUMPLE*"}
+{"key":"Sfx_PaperCrumple","value":"*CRUMPLE*"},
+{"key":"Sfx_Scan","value":"*SCANNING SOUNDS*"}
 
 ]}
