--- a/Resources/mtm101.rulerp.baldiplus.criminalpackroot/Language/English/OtherCharacters.json
+++ b/Resources/mtm101.rulerp.baldiplus.criminalpackroot/Language/English/OtherCharacters.json
@@ -8,5 +8,6 @@
 {"key":"CharacterHappy_Baldi","value":"For me? Thanks!"},
 {"key":"CharacterHappy_TheTest","value":"*Thankful humming noise*"},
 {"key":"Vfx_PRI_NoFraud","value":"No commiting fraud in the halls!"}
+{"key":"PRI_NoContraband","value":"No possessing contraband in the halls!"}
 
 ]}
