--- a/Resources/mtm101.rulerp.baldiplus.criminalpackroot/Language/English/OtherCharacters.json
+++ b/Resources/mtm101.rulerp.baldiplus.criminalpackroot/Language/English/OtherCharacters.json
@@ -7,7 +7,7 @@
 {"key":"CharacterHappy_Beans","value":"Huehohoo!"},
 {"key":"CharacterHappy_Baldi","value":"For me? Thanks!"},
 {"key":"CharacterHappy_TheTest","value":"*Thankful humming noise*"},
-{"key":"Vfx_PRI_NoFraud","value":"No commiting fraud in the halls!"}
+{"key":"Vfx_PRI_NoFraud","value":"No commiting fraud in the halls!"},
 {"key":"PRI_NoContraband","value":"No possessing contraband in the halls!"}
 
 ]}
