--- a/Resources/mtm101.rulerp.bbplus.carnivalpackroot/Language/English/Baldi.json
+++ b/Resources/mtm101.rulerp.bbplus.carnivalpackroot/Language/English/Baldi.json
@@ -1,6 +1,6 @@
 {"items":[
 
 {"key":"Vfx_BAL_Event_BalloonFrenzy_1","value":"Uh oh. The school's been flooded with balloons!"},
-{"key":"Vfx_BAL_Event_BalloonFrenzy_2","value":"We ALL need to do our part to get them cleaned up!"},
+{"key":"Vfx_BAL_Event_BalloonFrenzy_2","value":"We ALL need to do our part to get them cleaned up!"}
 
 ]}
