iou sticker (wip)

--- a/Resources/mtm101.rulerp.baldiplus.criminalpackroot/Language/English/Items.json
+++ b/Resources/mtm101.rulerp.baldiplus.criminalpackroot/Language/English/Items.json
@@ -20,6 +20,9 @@
 {"key":"Itm_KeyCardBlue","value":"Level 2 Key Card"},
 {"key":"Itm_KeyCardRed","value":"Level 3 Key Card"},
 {"key":"Itm_KeyCardAll","value":"Full Key Card"},
-{"key":"Desc_KeyCardBad","value":"Key Card\nThis shouldn't be possible!"}
+{"key":"Desc_KeyCardBad","value":"Key Card\nThis shouldn't be possible!"},
+
+{"key":"StickerTitle_IOU","value":"I.O.U"},
+{"key":"StickerDescription_IOU","value":"Adds a 5% chance any picked up item becomes an I.O.U.\nWhether you want it to or not."}
 
 ]}
